# natural-numbers

./: README.md  natural-numbers.cabal
src/: Natural.hs
