name:                natural-numbers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/natural-numbers#readme
license:             BSD3
license-file:        LICENSE
author:              Highlander Paiva
maintainer:          hvpaiva@icloud.com
copyright:           2022 Highlander Paiva
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable natural-numbers
  hs-source-dirs:      src
  main-is:             Natural.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
